Adding 3 new fields to resource table.
